# cookiecutter-template

./: cookiecutter.json  requirements_dev.txt  todo.txt
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yaml  changelog.md  conda_env.yaml  engage.sh  init_conda.sh  init_env.sh  pyproject.toml  pytest.ini  requirements.txt  tox.ini
{{cookiecutter.project_slug}}/.azuredevops/: pull_request_template.txt
{{cookiecutter.project_slug}}/.azuredevops/pipeline_templates/: build.yml  config.yml  main.yml  pre-commit.yml
{{cookiecutter.project_slug}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/workflows/: build-pipeline.yml  tests.yml
{{cookiecutter.project_slug}}/azure/pipeline_templates/: install_and_configure_python.yml  main.yml  pre-commit.yml  test.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_requirements.txt
