[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.open_source_license}}"
package-mode = "{{cookiecutter.poetry_package_mode}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
langchain = "0.0.274"
gpt4all = "1.0.8"
chromadb = "0.4.12"
llama-cpp-python = "0.1.81"
urllib3 = "1.26.15"
PyMuPDF = "1.23.1"
python-dotenv = "^1.0.0"
unstructured = "0.10.8"
extract-msg = "0.45.0"
tabulate = "^0.9.0"
pandoc = "^2.3"
pypandoc = "^1.11"
tqdm = "4.66.1"
sentence-transformers = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
